--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Neue Montreal, -apple-system, BlinkMacSystemFont, Segoe UI,
+  font-family: Value Sans Pro, -apple-system, BlinkMacSystemFont, Segoe UI,
     Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
     sans-serif;
 }
@@ -16,7 +16,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -24,4 +24,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
