--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -16,6 +20,12 @@ a {
   box-sizing: border-box;
 }
 
+.text-input-large {
+  background-color: #d9d9d9;
+  border-radius: 32px;
+  border: none;
+}
+
 /* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -25,3 +35,9 @@ a {
     background: black;
   }
 } */
+
+.caption {
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Value Sans Pro";
+}
